--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
 						DebugText.innerHTML = DeviceInfo;
 
 					var Page = Data['ModuleUrl'].replace('php','html');
+					
+					alert(Page);
 
 					window.location.href = Page;
 				} else if(Data['Option'] === 'LICENSE'){
