--- a/tv.html
+++ b/tv.html
@@ -91,7 +91,7 @@
                 success: function (response) {
                     var Data = $.parseJSON(response);
 
-                    alert(Data);
+                    alert(JSON.stringify(DATA));
                 }
             });
         }
