--- a/tv.html
+++ b/tv.html
@@ -45,8 +45,8 @@
     var TemplateSource = '';
     var Data = '';
 
-    var CurrentModule = '[@CurrentModule]',
-        ModuleId      = '[@ModuleId]',
+    var CurrentModule = '',
+        ModuleId      = '',
         IndexLogo     = '';
 
     var head = document.getElementsByTagName('head').item(0),
@@ -127,6 +127,8 @@
             head.appendChild(script);
         }
 
+        i = 0;
+
         for(i = 0; i < Data['Styles'].length; i++){
             link = document.createElement('link');
             link.type = 'text/css';
@@ -135,11 +137,12 @@
 
             head.appendChild(link);
         }
+        i = 0;
 
         for(i = 0; i < Data['ScriptsFooter'].length; i++){
             script = document.createElement('script');
             script.setAttribute('type', 'text/javascript');
-            script.setAttribute('src', Data['ScriptsHeader'][i]);
+            script.setAttribute('src', Data['ScriptsFooter'][i]);
             head.appendChild(script);
         }
     }
