--- a/tv.html
+++ b/tv.html
@@ -59,7 +59,8 @@
         var b2bcontrol = window.b2bapis.b2bcontrol;
 
         try {
-            MACAddress = b2bcontrol.getMACAddress();
+            //MACAddress = b2bcontrol.getMACAddress();
+            MACAddress  = 'fc:03:9f:5c:98:ed';
         } catch (e) {
             //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
         }
