--- a/tv.html
+++ b/tv.html
@@ -146,23 +146,23 @@
     }
 
     function SetFooterScripts(){
-        for(i = 0; i < Data['ScriptsFooter'].length; i++){
+        //for(i = 0; i < Data['ScriptsFooter'].length; i++){
             script = document.createElement('script');
             script.setAttribute('type', 'text/javascript');
             script.setAttribute('src', Data['ScriptsFooter'][i]);
             console.log(Data['ScriptsFooter'][i]);
             footer.appendChild(script);
 
-            //i++;
-            // if(i >= Data['ScriptsFooter'].length){
-            //     clearInterval(FooterInterval);
-            //     console.log('END SCRIPTS');
-            // }
-        }
+            i++;
+            if(i >= Data['ScriptsFooter'].length){
+                clearInterval(FooterInterval);
+                console.log('END SCRIPTS');
+            }
+        //}
     }
 
-    //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 900);
+    var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 900);
 
-    setTimeout(function(){ SetFooterScripts(); }, 900);
+    //setTimeout(function(){ SetFooterScripts(); }, 900);
 </script>
 </html>
