--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 						alert('Registrado correctamente');
 					}
 
-					var DeviceInfo = 'BBINCOTV > Macaddress: '+MACAddress+' Ip: '+IPAddress + ' Update: '+Data['Updated'];
+					var DeviceInfo = 'BBINCOTV Update: '+Data['Updated'] + ' - '+Data['DeviceUpdate'];
 						DebugText.innerHTML = DeviceInfo;
 
 					var Page = Data['ModuleUrl'].replace('php','html');
