--- a/tv.html
+++ b/tv.html
@@ -73,7 +73,7 @@
         url: 'http://'+ServerIp+'/BBINCO/TV/Core/Controllers/Index.php',
         async: false,
         data: {
-            Option      : 'LOAD',
+            Option      : 'TVLOAD',
             MacAddress  : MACAddress,
         },
         success: function (response) {
