--- a/tv.html
+++ b/tv.html
@@ -78,6 +78,8 @@
         },
         success: function (response) {
             var InfoDevice = $.parseJSON(response);
+
+            alert(InfoDevice);
             ModuleId = InfoDevice['ModuleId'];
             CurrentModule = InfoDevice['ModuleName'];
 
