--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 			//' error code = ' + error.code
 		}
 
-		DebugText.innerHTML = 'IP: '+IPAddress + ' MAC: '+MACAddress + ' TV: '+TvModel;
+		DebugText.innerHTML = 'IP: '+IPAddress + ' MAC: '+MACAddress + ' TV: '+TvModel + ' '+ServerIp;
 
 		GetInfoDevice();
 	}
