--- a/tv.html
+++ b/tv.html
@@ -77,7 +77,9 @@
             MacAddress  : MACAddress,
         },
         success: function (response) {
+            alert(MACAddress);
             var InfoDevice = $.parseJSON(response);
+            alert(JSON.stringify(InfoDevice));
 
             ModuleId = InfoDevice['ModuleId'];
             CurrentModule = InfoDevice['ModuleName'];
