--- a/tv.html
+++ b/tv.html
@@ -124,7 +124,7 @@
             success: function (response) {
                 document.getElementById('GeneralBox').innerHTML = '<div id="DebugText"></div> '+response;
 
-                console.log('SE CREAO EL CONTENIDO HTML');
+                console.log('SE CREO EL CONTENIDO HTML');
             }
         });
 
