--- a/index.html
+++ b/index.html
@@ -216,13 +216,24 @@
 	function SetData(){
 
 		try {
-			IPAddress = b2bapis.b2bcontrol.getIPAddress();
+			IPAddress = b2bcontrol.getIPAddress();
+		} catch (e) {
+			//'[getIPAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
+		}
+
+		try {
+			IPAddressW = b2bcontrol.getIPAddress('WIRED');
+			alert('IPAddressW: '+IPAddressW);
 		} catch (e) {
 			//'[getIPAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
 		}
 
 		try {
 			MACAddress = b2bcontrol.getMACAddress();
+			MACAddress_WIRED = b2bapis.b2bcontrol.getMACAddress('WIRED');
+			MACAddress_WIRELESS = b2bapis.b2bcontrol.getMACAddress('WIRELESS');
+
+			alert('MACAddress_WIRED: '+MACAddress_WIRED+' MACAddress_WIRELESS: '+MACAddress_WIRELESS);
 		} catch (e) {
 			//'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
 		}
