--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 		}
 
 		try {
-			IPAddressW = b2bcontrol.getIPAddress('WIRED');
-			alert('IPAddressW: '+IPAddressW);
+			IPAddressWR = b2bcontrol.getIPAddress('WIRELESS');
+			alert('IPAddressWR: '+IPAddressWR);
 		} catch (e) {
 			//'[getIPAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
 		}
