--- a/tv.html
+++ b/tv.html
@@ -35,7 +35,7 @@
 
     <script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 </head>
-<body>
+<body onload='init();'>
     <div class='GeneralBox' id='GeneralBox'></div>
 </body>
 <footer></footer>
