--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel='stylesheet' href='./Views/Styles/FontAwesome/css/all.css'>
 	<link rel='stylesheet' href='./Views/Layouts/Initial/Index.css'>
 </head>
-<body>
+<body onload='init();'>
 <div class='ContainerIndex' style="background-image: url('./Media/init.jpg') ">
 	<br>
 	<h1 id='DebugText'></h1>
@@ -48,7 +48,7 @@
 </body>
 <script>
 	/* Carga inicial */
-	setTimeout(function(){ SetData(); }, 3000);
+	setTimeout(function(){ SetData(); }, 4000);
 
 	var init = function() {
 		if (window.tizen !== undefined) {
