--- a/tv.html
+++ b/tv.html
@@ -43,8 +43,7 @@
 <footer></footer>
 <script>
     /* Carga inicial */
-    var b2bcontrol = '',
-        PageContent = 'tv';
+    var b2bcontrol = '';
 
     var MACAddress  = '';
 
@@ -72,7 +71,7 @@
                 //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
             }
 
-            registerkeys();
+            registerkeys('tv');
         }
     }
 
