--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 			webapis.network.addNetworkStateChangeListener(function(value) {
 				if (value == webapis.network.NetworkState.GATEWAY_DISCONNECTED) {
 					// Something you want to do when network is disconnected
+					alert('GATEWAY_DISCONNECTED')
 				} else if (value == webapis.network.NetworkState.GATEWAY_CONNECTED) {
 					// Something you want to do when network is connected again
+					alert('GATEWAY_CONNECTED');
 					SetData();
 				}
 			});
