--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body onload='init();'>
 <div class='ContainerIndex' style="background-image: url('./Media/init.jpg') ">
 	<br>
-	<h1 id='DebugText'>L O A D I N G</h1>
+	<h1 id='DebugText'> L  O  A  D  I  N  G . . .</h1>
 </div>
 
 <div id='Register'>
