--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
 
 			registerkeys();
 
+			// NETWORK
+			webapis.network.addNetworkStateChangeListener(function(value) {
+				alert(value);
+				if (value == webapis.network.NetworkState.GATEWAY_DISCONNECTED) {
+					// Something you want to do when network is disconnected
+					alert('GATEWAY_DISCONNECTED');
+				} else if (value == webapis.network.NetworkState.GATEWAY_CONNECTED) {
+					// Something you want to do when network is connected again
+					alert('GATEWAY_CONNECTED');
+					SetData();
+				}
+			});
+
 			addNetworkStateChangeListener();
 		}
 	}
