--- a/tv.html
+++ b/tv.html
@@ -71,6 +71,8 @@
                 //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
             }
 
+            alert(MACAddress);
+
             registerkeys('tv');
         }
     }
