--- a/tv.html
+++ b/tv.html
@@ -70,6 +70,8 @@
             } catch (e) {
                 //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
             }
+
+            GetModule();
         }
     }
 
@@ -165,8 +167,6 @@
             //     console.log('END SCRIPTS');
             // }
         }
-
-        registerkeys('tv');
     }
 
     //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
