--- a/tv.html
+++ b/tv.html
@@ -70,7 +70,7 @@
             } catch (e) {
                 //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
             }
-
+alert('MAC'+MACAddress);
             registerkeys('tv');
 alert('registerkeys TV');
             GetModule();
