--- a/tv.html
+++ b/tv.html
@@ -60,7 +60,7 @@
         script = '',
         link = '',
         i = 0;
-
+    MACAddress = 'd0:03:df:20:c8:1e';
     var init = function() {
         if (window.tizen !== undefined) {
             b2bcontrol = window.b2bapis.b2bcontrol;
@@ -75,6 +75,8 @@
             alert(MACAddress);
             GetModule();
         }
+
+
     }
 
     function GetModule() {
