--- a/tv.html
+++ b/tv.html
@@ -72,9 +72,12 @@
                 //'[getMACAddress] call syncFunction exception [' + e.code + '] name: ' + e.name + ' message: ' + e.message);
             }
 
+            alert('Mac: '+MACAddress);
+
             GetModule();
         }
     }
+
 
     function GetModule() {
         $.ajax({
